Configurações iniciais da Interface Gráfica da tela de login.